# ghostmesh

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LLM.md  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
docs/: Ghost Mesh - Full Implementation Blueprint draft.md  ai-adoption-path.md  api.md  architecture.md  artifact_storage_boundary.md  deployment.md  ghost_mesh_architecture_and_positioning_addendum v1.md  ghost_mesh_implementation_addendum v1.md  ghost_mesh_nodes_addendum v1.md  ghost_mesh_phased_implementation_plan.md  ghost_mesh_updated_whitepaper v1.md  hermes_chief_of_staff_architecture.md  intent_driven_genesis_architecture.md  intent_driven_genesis_mvp.md  next_sprint_implementation_plan.md  participant_authority_architecture.md  patch_panel_registry_architecture.md  worker-sdk.md  workflows.md
tests/: helpers.py  test_api.py  test_artifact_storage.py  test_mcp_server.py  test_patchpanel_validation.py  test_phase10_api_sdk_updates.py  test_phase10_authority_domain.py  test_phase10_authority_persistence.py  test_phase10_authorization_service.py  test_phase10_genesis.py  test_phase10_patch_panel_proposals.py  test_phase10_patch_panel_registry.py  test_phase10_role_catalog.py  test_phase10_verification.py  test_phase3_runtime.py  test_phase4_node_execution.py  test_phase5_validator_surface.py  test_phase6_shadow_mutations.py  test_phase7_boundaries.py  test_phase8_observability.py  test_phase9_docs.py  test_postgres_runtime.py  test_runtime_prep.py  test_system_agent_registration.py  (+1 more)
(+98 files in other folders)
